--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-hikari>=2.0.0.dev104
-hikari-lightbulb>=2.1.1
+hikari>=2.0.0.dev106
+hikari-lightbulb>=2.2.0
 python-dotenv>=0.19.2
 dataset>=1.5.2
 beautifulsoup4>=4.10.0
+hikari-miru>=1.1.1
 uvloop>=0.16; sys_platform != "win32"
